--- a/tareas/src/app/components/tareas/tareas.component.html
+++ b/tareas/src/app/components/tareas/tareas.component.html
@@ -3,7 +3,7 @@
         <div class="col-lg-8 offset-lg-2" >
             <input style="border: 1px solid black;" type="text"  [(ngModel)]="nombreTarea"
             (keyup.enter)="agregarTarea()"
-            class="form-control form-control-lg" placeholder="Ingresar tarea...">
+            class="form-control form-control-lg" placeholder="Ingresar una tarea...">
         </div>
         <div class="col-lg-6 offset-lg-3">
             <div *ngIf="listaTareas.length === 0" class="card mt-3" style="border: 1px solid black; text-align: center;">
